// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsFilterContainerComponent matches snapshot 1`] = `
<div
  className="filter-container "
>
  <Connect(MobileControls) />
  <div
    className="filter-container-bottom"
  >
    <div
      className="usa-grid-full filter-control-container"
    >
      <div
        className="filter-control-left"
      >
        Select Filter:
      </div>
      <div
        className="filter-control-right"
      >
        <ResetFilters
          resetFilters={[Function]}
        />
      </div>
    </div>
    <div
      className="usa-grid-full search-filters-container"
    >
      <SearchFiltersContainerLoadable
        fetchMissionAutocomplete={[Function]}
        fetchPostAutocomplete={[Function]}
        filters={
          Array [
            Object {
              "expanded": true,
              "title": "title",
            },
          ]
        }
        missionSearchHasErrored={false}
        missionSearchIsLoading={false}
        missionSearchResults={Array []}
        postSearchHasErrored={false}
        postSearchIsLoading={false}
        postSearchResults={Array []}
        queryParamToggle={[Function]}
        queryParamUpdate={[Function]}
        selectedAccordion={
          Object {
            "main": "",
            "sub": "",
          }
        }
        setAccordion={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`ResultsFilterContainerComponent matches snapshot when isLoading === true 1`] = `
<div
  className="filter-container is-loading"
>
  <Spinner
    size="small"
    style={Object {}}
    type="results-filter"
  />
  <Connect(MobileControls) />
  <div
    className="filter-container-bottom"
  >
    <div
      className="usa-grid-full filter-control-container"
    >
      <div
        className="filter-control-left"
      >
        Select Filter:
      </div>
      <div
        className="filter-control-right"
      >
        <ResetFilters
          resetFilters={[Function]}
        />
      </div>
    </div>
    <div
      className="usa-grid-full search-filters-container"
    >
      <SearchFiltersContainerLoadable
        fetchMissionAutocomplete={[Function]}
        fetchPostAutocomplete={[Function]}
        filters={
          Array [
            Object {
              "expanded": true,
              "title": "title",
            },
          ]
        }
        missionSearchHasErrored={false}
        missionSearchIsLoading={false}
        missionSearchResults={Array []}
        postSearchHasErrored={false}
        postSearchIsLoading={false}
        postSearchResults={Array []}
        queryParamToggle={[Function]}
        queryParamUpdate={[Function]}
        selectedAccordion={
          Object {
            "main": "",
            "sub": "",
          }
        }
        setAccordion={[Function]}
      />
    </div>
  </div>
</div>
`;
